--- a/mixologylab/src/shared/MenuSquare.css
+++ b/mixologylab/src/shared/MenuSquare.css
@@ -4,12 +4,18 @@
     height:222px;
 }
 
+.MenuSquareContainer a{
+	color: white;
+}
+
 .MenuImageDiv{
     width:222px;
     height:222px;
     background-color: lightseagreen;
     position: relative;
 }
+
+
 
 /*This part shows the square*/
 
@@ -20,8 +26,11 @@
 
 }
 
-
-
+.TopInfo{
+    position: absolute;
+	text-align: center;
+	top: 0; right: 0; left: 0; bottom: 0;
+}
 
 /*This part is the hidden until on hover*/
 .MenuText{
@@ -34,7 +43,8 @@
     background-color: rgba(0,0,0,0.6);
     color:white;
     opacity: 0;
-
+	border-style: solid;
+	border-color: white;
 }
 
 .MenuText h3{
