--- a/mixologylab/src/App.css
+++ b/mixologylab/src/App.css
@@ -4,12 +4,12 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 50px;
 }
 
 .App-header {
-  background-color: #222;
-  padding: 20px;
+  background-color: #121212;
+  padding: 10px;
   color: white;
 }
 
@@ -43,6 +43,8 @@
   text-decoration: none;
 }
 
-.title{
+#title{
   font-family: Righteous, cursive;
+  letter-spacing: 0.08em;
+  font-size: 2.2em;
 }
