--- a/mixologylab/src/shared/MenuSquare.css
+++ b/mixologylab/src/shared/MenuSquare.css
@@ -36,15 +36,14 @@
 .MenuText{
     position: absolute;
     top: 0; right: 0; left: 0; bottom: 0;
-    width: 222px;
-    line-height:222px;
+    width: 212px;
+    line-height:212px;
     text-align: center;
     vertical-align: middle;
     background-color: rgba(0,0,0,0.6);
     color:white;
     opacity: 0;
-	border-style: solid;
-	border-color: white;
+	border-style: solid
 }
 
 .MenuText h3{
