--- a/mixologylab/src/components/Filter.css
+++ b/mixologylab/src/components/Filter.css
@@ -228,17 +228,17 @@ body {
   background-color: #3399cc;
 }
 
-.search{
+.displayDrinkButton{
     text-align: center;
 
     margin-top: 50px;
     width: 100%;
     display:inline-block;
 }
-#search{
+#displayDrinkButton{
     width:3em; height: 3em;
     padding: 20px 25px;
-    border-radius: 50%;
+    border-radius: 30px;
     color: teal;
     transition: all 1s;
     animation-name: search;
@@ -246,4 +246,26 @@ body {
     animation-iteration-count: infinite;
     font-size:1.5em;
     border: 3px solid teal;
+}
+
+.drinkFilterTitle{
+  padding-top: 30px;
+  font-size: 2.5em;
+  letter-spacing: 6px;
+  font-family: Playball,sans-serif;
+  color: #ec08e0;
+}
+
+.loadingContainer{
+  z-index: 100;
+  position:absolute;
+  top: 100px;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color: black;
+  color:white;
+}
+.loadingIcon{
+  padding-top:50px;
 }
