--- a/mixologylab/src/shared/MenuSquare.css
+++ b/mixologylab/src/shared/MenuSquare.css
@@ -2,6 +2,7 @@
     flex: 1 1 0;
     width:222px;
     height:222px;
+    margin-top: 30px;
 
 }
 
@@ -12,8 +13,9 @@
 }
 
 .MenuImageDiv{
-    width:222px;
-    height:222px;
+    padding-top: 10px;
+    width:200px;
+    height:200px;
     background-color: black;
     position: relative;
 }
